# estimate_b2c_predict

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
etc/: .env.dist
etc/docker/python/: dockerfile
etc/docker/python/image-root/etc/: pip.conf
etc/make/: command.mk  help.mk
src/estimate_b2c_predict/: __main__.py  config.py  estimate_b2c.py
