[project]
name = "estimate_b2c_predict"
version = "0.0.1"
description = "estimate the b2c value of a car"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
